--- a/Syles/main.css
+++ b/Syles/main.css
@@ -36,7 +36,6 @@ body {
 }
 
 body {
-    
     background: var(--color-background);
     display: flex;
     align-items: center;
@@ -55,7 +54,12 @@ textarea {
 }
 
 #container {
-    border: 1px solid purple;
     width: 90vw;
     max-width: 700px;
+}
+
+@media (min-width: 700px) {
+    :root {
+        font-size: 62.5%;
+    }
 }
