created backend with express and nodemon

--- a/src/views/study.html
+++ b/src/views/study.html
@@ -7,12 +7,12 @@
     
     <title>Proffy</title>
 
-    <link rel="shortcut icon" href="../public/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
-    <link rel="stylesheet" href="../public/styles/main.css">
-    <link rel="stylesheet" href="../public/styles/partials/header.css">
-    <link rel="stylesheet" href="../public/styles/partials/forms.css">
-    <link rel="stylesheet" href="../public/styles/partials/page-study.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/partials/header.css">
+    <link rel="stylesheet" href="/styles/partials/forms.css">
+    <link rel="stylesheet" href="/styles/partials/page-study.css">
 
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
@@ -24,10 +24,10 @@
 
         <header class="page-header">
             <div class="top-bar-container">
-                <a href="./index.html">
-                <img src="../public/images/icons/back.svg" alt="">
+                <a href="/">
+                <img src="/images/icons/back.svg" alt="">
                 </a>
-                <img src="../public/images/logo.svg" alt="">
+                <img src="/images/logo.svg" alt="">
             </div>
 
             <div class="header-content">
@@ -90,7 +90,7 @@
                 <footer>
                     <p>Preço/hora<strong>R$ 20,00</strong></p>
                     <button type="button">
-                        <img src="../public/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
                     </button>
                 </footer>
             </article>
@@ -111,7 +111,7 @@
                 <footer>
                     <p>Preço/hora<strong>R$ 20,00</strong></p>
                     <button type="button">
-                        <img src="../public/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
                     </button>
                 </footer>
             </article>
