--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="input-block">
-                        <label for="whatsapp">Whatsapp <small>somente números</small></label>
+                        <label for="whatsapp">Whatsapp <small>(somente números)</small></label>
                         <input id="whatsapp" name="whatsapp" type="number" required>
                     </div>
 
@@ -69,23 +69,16 @@
                        <label for="subject">Matéria</label>
                        <select name="subject" id="subject" required >
                            <option value="">Selecione uma opição</option>
-                           <option value="1">Artes</option>
-                           <option value="2">Biologia</option>
-                           <option value="3">Ciências</option>
-                           <option value="4">Educação Física</option>
-                           <option value="5">Física</option>
-                           <option value="6">Geografia</option>
-                           <option value="7">História</option>
-                           <option value="8">Matemática</option>
-                           <option value="9">Português</option>
-                           <option value="10">Química</option>
+                           {% for subject in subjects %}
+                                <option value="{{loop.index0}}">{{subject}}</option>
+                           {% endfor %}
                        </select>
                    </div>
                    <div class="input-block">
                        <label for="cost">Custo da sua hora/aula 
                            <small>(R$)</small>
                         </label>
-                       <input type="cost" id="cost" type="number">
+                       <input name="cost" type="cost" id="cost" type="number">
                    </div>
                </fieldset>
 
@@ -99,24 +92,21 @@
                            <label for="weekday">Dia da semana</label>
                            <select name="weekday[]" required>
                                <option value="">Selecione uma opição</option>
-                               <option value="0">Domingo</option>
-                               <option value="1">Segunda</option>
-                               <option value="2">Terça</option>
-                               <option value="3">Quarta</option>
-                               <option value="4">Quinta</option>
-                               <option value="5">Sexta</option>
-                               <option value="6">Sábado</option>
+                               {% for day in weekdays %}
+
+                                <option value="{{loop.index0}}">{{day}}</option>
+                                {% endfor %}
                             </select>
                         </div>
 
                         <div class="input-block">
-                            <label for="time-from">Das</label>
-                            <input type="time" name="time-from[]" required >
+                            <label for="time_from">Das</label>
+                            <input type="time" name="time_from[]" required >
                         </div>
 
                         <div class="input-block">
-                            <label for="time-to">Até</label>
-                            <input type="time" name="time-to[]" required >
+                            <label for="time_to">Até</label>
+                            <input type="time" name="time_to[]" required >
                         </div>
                    </div>
 
