--- a/src/views/study.html
+++ b/src/views/study.html
@@ -36,37 +36,28 @@
                     <div class="select-block">
                         <label for="subject">Matérias</label>
                         <select name="subject" id="subject">
-                            <option value="" disabled="" hidden="">Selecione uma matéria</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Química</option>
+
+                           {% for subject in subjects %}
+                                <option value="{{loop.index0}}" {{ "selected" if filters.subject == loop.index0 }}>{{subject}}</option>
+                           {% endfor %}
+
                         </select>
                     </div>
 
                     <div class="select-block">
                         <label for="weekday">Dia da Semana</label>
                         <select name="weekday" id="weekday">
-                            <option value="" disabled="" hidden="">Selecione um dia da Semana</option>
-                            <option value="0">Domingo</option>
-                            <option value="1">Segunda</option>
-                            <option value="2">Terça</option>
-                            <option value="3">Quarta</option>
-                            <option value="4">Quinta</option>
-                            <option value="5">Sexta</option>
-                            <option value="6">Sábado</option>
+                            
+                            {% for day in weekdays %}
+                                <option value="{{loop.index0}}" {{ "selected" if filters.weekday == loop.index0 }}>{{day}}</option>
+                            {% endfor %}
+
                         </select>
                     </div>
 
                     <div class="input-block">
                         <label for="time">Horário</label>
-                        <input name="time" type="time" id="time">
+                        <input name="time" type="time" id="time" value="{{filters.time}}">
                     </div>
                     <button type="submit">Filtrar</button>
                 </form>
@@ -74,47 +65,33 @@
         </header>
 
         <main> <!-- conteúdo principal da page -->
-            <article class="teacher-item"> <!-- conteúdo que se repete diversas vezes -->
-                <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                    alt="Diego Fernandes">
-                
-                    <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
-                    </div>
-                </header>
+            
+            {%for proffy in proffys %}
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma de minhas explosões.</p>
-                
-                <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong></p>
-                    <button type="button">
-                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-                    </button>
-                </footer>
-            </article>
+                <article class="teacher-item"> <!-- conteúdo que se repete diversas vezes -->
+                    <header>
+                        <img src="{{proffy.avatar}}" 
+                        alt="{{proffy.name}}">
+                    
+                        <div>
+                            <strong>{{proffy.name}}</strong>
+                            <span>{{proffy.subject}}</span>
+                        </div>
+                    </header>
 
-            <article class="teacher-item"> <!-- conteúdo que se repete diversas vezes -->
-                <header>
-                    <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                    alt="Diego Fernandes">
-                
-                    <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
-                    </div>
-                </header>
+                    <p>{{proffy.bio}}</p>
+                    
+                    <footer>
+                        <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                        </p>
+                        <a href="http://api.whatsapp.com/send?1=pt_BRphone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+                            <img src="/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                        </a>
+                    </footer>
+                </article>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma de minhas explosões.</p>
-                
-                <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong></p>
-                    <button type="button">
-                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-                    </button>
-                </footer>
-            </article>
+            {%endfor%}
+
         </main>
 
     </div>
