database created and run

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -39,7 +39,7 @@
         </header>
 
         <main> <!-- conteúdo principal da page -->
-           <form action="" id="create-classes">
+           <form action="/save-classes" id="create-classes" method="POST">
                <fieldset>
                     <legend>Seus dados</legend>
                     <div class="input-block">
