--- a/src/views/study.html
+++ b/src/views/study.html
@@ -66,31 +66,37 @@
 
         <main> <!-- conteúdo principal da page -->
             
-            {%for proffy in proffys %}
+            {% if proffys == "" %}
 
-                <article class="teacher-item"> <!-- conteúdo que se repete diversas vezes -->
-                    <header>
-                        <img src="{{proffy.avatar}}" 
-                        alt="{{proffy.name}}">
-                    
-                        <div>
-                            <strong>{{proffy.name}}</strong>
-                            <span>{{proffy.subject}}</span>
-                        </div>
-                    </header>
+                <p class="no-results">Nenhum professor encontrado com sua pesquisa</p>
 
-                    <p>{{proffy.bio}}</p>
-                    
-                    <footer>
-                        <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
-                        </p>
-                        <a href="http://api.whatsapp.com/send?1=pt_BRphone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
-                            <img src="/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
-                        </a>
-                    </footer>
-                </article>
+            {% else %}
 
-            {%endfor%}
+                {%for proffy in proffys %}
+                    <article class="teacher-item"> <!-- conteúdo que se repete diversas vezes -->
+                        <header>
+                            <img src="{{proffy.avatar}}" 
+                            alt="{{proffy.name}}">
+                        
+                            <div>
+                                <strong>{{proffy.name}}</strong>
+                                <span>{{proffy.subject}}</span>
+                            </div>
+                        </header>
+
+                        <p>{{proffy.bio}}</p>
+                        
+                        <footer>
+                            <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                            </p>
+                            <a href="http://api.whatsapp.com/send?1=pt_BRphone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+                                <img src="/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                            </a>
+                        </footer>
+                    </article>
+                {%endfor%}
+
+            {% endif %}
 
         </main>
 
